--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "eslint": "4.18.1",
+    "eslint-config-standard": "11.0.0",
+    "eslint-config-standard-react": "6.0.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "6.0.0",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-standard": "3.0.1",
     "next": "5.0.0",
-    "nextein": "^1.2.1",
+    "nextein": "1.2.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "surge": "0.19.0"
