--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "surge": "0.19.0"
+  },
+  "dependencies": {
+    "timeago.js": "3.0.2"
   }
 }
