--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["standard", "standard-react"],
   "rules": {
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off"
   }
 }
