Add canonical and og:url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nextein",
-    "deploy": "npm run export && surge ./out --domain aprendiendoreact.com",
+    "deploy": "rm -rf ./out && npm run export && surge ./out --domain aprendiendoreact.com",
     "export": "NODE_ENV=production nextein build && nextein export",
     "lint": "eslint pages componentes --fix"
   },
