--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "4",
-    "eslint-config-standard": "11",
-    "eslint-config-standard-react": "6",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "2",
-    "eslint-plugin-node": "6",
-    "eslint-plugin-promise": "3",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "7",
-    "eslint-plugin-standard": "3"
+    "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
-    "timeago.js": "3.0.2",
-    "next": "6",
-    "nextein": "1",
+    "next": "^7.0.2",
+    "nextein": "^2.1.2",
     "react": "16",
-    "react-dom": ">=16.0.1"
+    "react-dom": ">=16.0.1",
+    "timeago.js": "3.0.2"
   }
 }
